--- a/docker_volume/volume_with_file/Dockerfile
+++ b/docker_volume/volume_with_file/Dockerfile
@@ -10,5 +10,8 @@ CMD ["bash"]
 
 
 # sudo docker run -it --name container1 --privileged=true --volumes-from 6f889c2d7268 new1 /bin/bash --> to attach volume to another conatiner
+
+it will only create the volueme and attach to container and i contianer will delete it the volume remain same so that we can restor the data.
+
  
 
